<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/pairedlist"
            android:layout_width="200dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSetY2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:clickable="false"
            android:enabled="true"
            android:gravity="bottom"
            android:scrollbars="vertical"
            android:textAlignment="center"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSet_Max_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clear"
            app:layout_constraintTop_toBottomOf="@+id/btnScan" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />
        <Button
            android:id="@+id/btnGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graff"
            app:layout_constraintTop_toBottomOf="@+id/btnStop" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

