<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.Setup">

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/set_min_y"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/set" />

            <Button
                android:id="@+id/get_min_y"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/get" />

            <EditText
                android:id="@+id/et_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/set_miny"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <Button
                android:id="@+id/btnset_max_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/set" />

            <Button
                android:id="@+id/get_max_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/get"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_max_y" />

            <EditText
                android:id="@+id/et_max_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/Set_maxy"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnset_max_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/set" />

            <Button
                android:id="@+id/get_max_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/get" />

            <EditText
                android:id="@+id/et_max_bal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/set_max_bal"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <Button
                android:id="@+id/btnset_max_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/set" />

            <Button
                android:id="@+id/get_max_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/get" />

            <EditText
                android:id="@+id/et_max_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/set_view"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout0tmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout0"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout1tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/set_min_ytmp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/set" />

            <Button
                android:id="@+id/get_min_ytmp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/get" />

            <EditText
                android:id="@+id/et_ytmp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/set_minytmp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1tmp">

            <Button
                android:id="@+id/btnset_max_ytmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/set" />

            <Button
                android:id="@+id/get_max_ytmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="44dip"
                android:minHeight="24dip"
                android:text="@string/get"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_max_y" />

            <EditText
                android:id="@+id/et_max_ytmp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/set_maxytmp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <CheckBox
            android:id="@+id/dinamic_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dinamic_mode" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>